# VidFlow

./: .gitignore  LICENSE  README.md  bridge.py  electron-builder.json  main.py  package-lock.json  package.json  pyproject.toml  readme2.md  requirements.txt
.github/workflows/: release-build.yml
backend/: __init__.py  config.py  main.py  runner.py
backend/api/: __init__.py  downloads.py  health.py  history.py  metadata.py  settings.py
backend/downloader/: __init__.py  base.py  facebook.py  factory.py  tiktok.py  youtube.py
backend/models/: __init__.py  download.py  errors.py  settings.py
backend/services/: download_manager.py  ffmpeg_service.py  format_selector.py  history_service.py  settings_service.py  storage_service.py  ytdlp_service.py
backend/utils/: __init__.py  filenames.py  formatting.py  logging.py  platform_detect.py
electron/: main.js  preload.js
electron/ipc/: app.ipc.js  config.ipc.js  download.ipc.js  filesystem.ipc.js
electron/services/: backend-process.js
qml/: Main.qml
renderer/: index.html  vite.config.js
renderer/src/: main.jsx
scripts/: assert-platform.js  build.py  run-electron-builder.js  run-python.js
services/: ytdlp_service.py
tests/: __init__.py  test_format_selector.py
tests/backend/: test_filenames.py  test_format_selector_backend.py  test_platform_detect.py  test_ytdlp_service.py
tests/renderer/: smoke.test.js
vidflow/: __init__.py  app.py  app_bridge.py  models.py
vidflow/core/: __init__.py  system.py
vidflow/qml/: Main.qml
workers/: analysis_worker.py  download_worker.py
(+25 files in other folders)
