[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vidflow"
version = "0.3.0"
description = "Aplicacion desktop Electron + FastAPI para descargar video y audio desde TikTok, Facebook y YouTube."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
  { name = "Rover Serrano" }
]
dependencies = [
  "fastapi>=0.111,<1",
  "uvicorn[standard]>=0.29,<1",
  "pydantic>=2.7,<3",
  "platformdirs>=4.2,<5",
  "psutil>=5.9,<6",
  "python-dotenv>=1.0,<2",
  "yt-dlp>=2026.3.17"
]

[project.optional-dependencies]
build = ["pyinstaller>=6.0"]
test = ["pytest>=7.4,<9", "httpx>=0.27,<1"]

[project.scripts]
vidflow-backend = "backend.main:run"

[tool.setuptools.packages.find]
include = ["backend*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
